New in v0.9.4 (2002/07/25)
--------------------------

Man page now correctly included in rpm.

rdiff-backup script does not have exec permissions until it is
installed (thanks Jason Piterak).


New in v0.9.3 (2002/07/15)
--------------------------

Added --sleep-ratio option after hearing that rdiff-backup was too
hard on hard disks (thanks to Steve Alexander for the suggestion).
Quick example:  --sleep-ratio 0.25 makes rdiff-backup sleep about 25%
of the time.  Maybe this will help on bandwidth usage also.

Fixed -m/--mirror-only option.

Added --exclude-other-filesystems option.  Thanks to Paul Wouters for
the suggestion.

Added convenience field TotalDestinationSizeChange (total change in
destination directory - mirror change + increments change) to
session_statistics file.

Handle a particular situation better where a file changes in a certain
way while rdiff-backup is processing it.  Before rdiff-backup would
just crash; now it skips the file.  Thanks to Scott Bender for the bug
report.

A couple interface fixes to --remove-older-than.

Added some security features to the protocol, so rdiff-backup will now
only allow commands from remote connections.  The extra security will
be enabled automatically on the client (it knows what to expect), but
the extra switches --restrict, --restrict-update-only, and
--restrict-read-only have been added for use with --server.


New in v0.9.2 (2002/06/27)
--------------------------

Interface directly with librsync(.a|.so) instead of running "rdiff"
command line utility.  This can significant save fork()ing time when
processing lots of smallish files that have changed.  Also, rdiff is
no longer required to be in the PATH.

Further speed optimizations, mostly reducing CPU consumption when
scanning through unchanged files.

Fixed Path bug which could caused globbing and regexp include/exclude
statements to malfunction when the base of the source directory was
"/" (root of filesystem).  Thanks to Vlastimil Adamovsky for noting